@@ -1,6 +1,7 @@
 Version 0.9.6 - unknown
-- fix autoreply unable to delete scenario
-- fix #3109982 wrong autoreply result due to missing autoreply_id in db query
+- add new method interceptsendsms() to intercept sent SMS before handled by gateway (anton)
+- fix autoreply unable to delete scenario (anton)
+- fix #3109982 wrong autoreply result due to missing autoreply_id in db query (anton)
 
 Version 0.9.5.2 - 101115
 - MAJOR: all SMS date/time will be adjusted to GMT+0 in database (anton)
